# core-javabit

./: .travis.yml  CONTRIBUTING.md  INSTALL  Makefile.am  README.md  configure.ac  libjavabitconsensus.pc.in
.tx/: config
build-aux/m4/: javabit_find_bdb48.m4  javabit_qt.m4  javabit_subdir_to_include.m4
contrib/: README.md  javabit-qt.pro  javabitd.bash-completion  qt_translations.py  tidy_datadir.sh
contrib/debian/: README.md  changelog  control  copyright  javabit-qt.desktop  javabit-qt.install  javabit-qt.lintian-overrides  javabit-qt.protocol  javabit-tx.install  javabitd.bash-completion  javabitd.examples  javabitd.install  javabitd.lintian-overrides  javabitd.manpages  rules  watch
contrib/devtools/: README.md  fix-copyright-headers.py  symbol-check.py  update-translations.py
contrib/gitian-descriptors/: README.md  gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win-signer.yml  gitian-win.yml
contrib/gitian-downloader/: petertodd-key.pgp
depends/: Makefile  README.md  config.site.in  description.md
doc/: Doxyfile  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  bips.md  build-openbsd.md  build-osx.md  build-unix.md  build-windows.md  developer-notes.md  dnsseed-policy.md  files.md  gitian-building.md  init.md  multiwallet-qt.md  reduce-traffic.md  release-notes.md  release-process.md  shared-libraries.md  tor.md  translation_process.md  translation_strings_policy.md  travis-ci.txt  unit-tests.md  zmq.md
qa/: README.md
share/: setup.nsi.in
src/: Makefile.am  Makefile.bench.include  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addressindex.h  addrman.h  alert.h  amount.cpp  amount.h  arith_uint256.h  base58.cpp  base58.h  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.h  chainparamsseeds.h  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.h  compat.h  compressor.h  core_io.h  core_memusage.h  core_write.cpp  dbwrapper.h  hash.h  httprpc.h  httpserver.cpp  httpserver.h  init.cpp  init.h  javabit-cli-res.rc  javabit-cli.cpp  javabit-tx-res.rc  (+61 more)
src/bench/: .gitignore  bench.h
src/compat/: byteswap.h  endian.h  glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/consensus/: consensus.h  merkle.cpp  merkle.h  params.h  validation.h
src/crypto/: common.h  hmac_sha256.h  hmac_sha512.h  ripemd160.h  sha1.h  sha256.h  sha512.h
src/policy/: fees.cpp  fees.h  policy.h  rbf.h
src/primitives/: block.h  transaction.h
src/qt/: Makefile  addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  askpassphrasedialog.cpp  askpassphrasedialog.h  bantablemodel.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  intro.cpp  intro.h  javabit.cpp  javabit.qrc  javabit_locale.qrc  javabitaddressvalidator.cpp  javabitaddressvalidator.h  javabitamountfield.cpp  javabitamountfield.h  javabitgui.cpp  javabitgui.h  javabitstrings.cpp  javabitunits.cpp  javabitunits.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  networkstyle.cpp  networkstyle.h  notificator.h  openuridialog.cpp  openuridialog.h  (+52 more)
src/qt/forms/: addressbookpage.ui  coincontroldialog.ui  debugwindow.ui  helpmessagedialog.ui  intro.ui  optionsdialog.ui  overviewpage.ui  receivecoinsdialog.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui
src/qt/locale/: javabit_af.ts  javabit_af_ZA.ts  javabit_ar.ts  javabit_be_BY.ts  javabit_bg.ts  javabit_bg_BG.ts  javabit_bs.ts  javabit_ca.ts  javabit_ca@valencia.ts  javabit_ca_ES.ts  javabit_cs.ts  javabit_cs_CZ.ts  javabit_cy.ts  javabit_da.ts  javabit_de.ts  javabit_el.ts  javabit_el_GR.ts  javabit_en.ts  javabit_en_GB.ts  javabit_eo.ts  javabit_es.ts  javabit_es_AR.ts  javabit_es_CL.ts  javabit_es_CO.ts  javabit_es_DO.ts  javabit_es_ES.ts  javabit_es_MX.ts  javabit_es_UY.ts  javabit_es_VE.ts  javabit_et.ts  javabit_eu_ES.ts  javabit_fa.ts  javabit_fa_IR.ts  javabit_fi.ts  javabit_fr.ts  javabit_fr_CA.ts  javabit_fr_FR.ts  javabit_gl.ts  javabit_he.ts  javabit_hi_IN.ts  (+43 more)
src/qt/res/: javabit-qt-res.rc
src/qt/test/: Makefile  paymentrequestdata.h  paymentservertests.cpp  paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/script/: interpreter.cpp  interpreter.h  javabitconsensus.cpp  javabitconsensus.h  script.h  script_error.h  sigcache.h  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/contrib/: lax_der_parsing.h
src/secp256k1/src/: tests.c
src/secp256k1/src/java/: org_javabit_NativeSecp256k1.c  org_javabit_NativeSecp256k1.h
src/secp256k1/src/java/org/bitcoin/: NativeSecp256k1.java
src/support/: cleanse.h  pagelocker.cpp  pagelocker.h
src/support/allocators/: secure.h  zeroafterfree.h
src/test/: Checkpoints_tests.cpp  DoS_tests.cpp  Makefile  README.md  accounting_tests.cpp  addrman_tests.cpp  alert_tests.cpp  allocator_tests.cpp  arith_uint256_tests.cpp  base32_tests.cpp  base58_tests.cpp  base64_tests.cpp  bip32_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  coins_tests.cpp  compress_tests.cpp  crypto_tests.cpp  dbwrapper_tests.cpp  getarg_tests.cpp  hash_tests.cpp  javabit-util-test.py  key_tests.cpp  limitedmap_tests.cpp  main_tests.cpp  mempool_tests.cpp  merkle_tests.cpp  miner_tests.cpp  multisig_tests.cpp  netbase_tests.cpp  pmt_tests.cpp  policyestimator_tests.cpp  pow_tests.cpp  prevector_tests.cpp  reverselock_tests.cpp  rpc_tests.cpp  rpc_wallet_tests.cpp  sanity_tests.cpp  scheduler_tests.cpp  script_P2PKH_tests.cpp  (+18 more)
src/test/data/: README.md  javabit-util-test.json
src/univalue/include/: univalue.h
src/univalue/lib/: univalue.cpp  univalue_escapes.h
src/wallet/: crypter.h  db.h  rpcdump.cpp  rpcwallet.cpp  wallet.cpp  wallet.h  wallet_ismine.h  walletdb.cpp  walletdb.h
src/wallet/test/: wallet_tests.cpp
src/zmq/: zmqabstractnotifier.h  zmqconfig.h  zmqnotificationinterface.h  zmqpublishnotifier.h
(+161 files in other folders)
